# coding-test-questions

./: CMakeLists.txt  README.md
binary_search_tree/: main.cpp
brackets_matching/: CMakeLists.txt  main.cpp
coin_sort/: CMakeLists.txt  main.cpp
const_exploration/: CMakeLists.txt  main1.cpp  main2.cpp
count_pairs/: CMakeLists.txt  main.cpp
diamond_pattern/: CMakeLists.txt  main.cpp
efficient_janitor/: CMakeLists.txt  main.cpp
hash/: CMakeLists.txt  main
hash_table/: CMakeLists.txt
hash_table/v1/: CMakeLists.txt  main.cpp
hash_table/v2/: CMakeLists.txt  main.cpp
image_flip/: CMakeLists.txt  main.cpp
image_tweaks/: CMakeLists.txt  main.cpp
min_max_sum/: CMakeLists.txt  main.cpp
move_to_front/: CMakeLists.txt  main.cpp
reverse_linked_list/: CMakeLists.txt  main.cpp
tree1/: CMakeLists.txt
